--- a/templates/registration/addstock.html
+++ b/templates/registration/addstock.html
@@ -1,8 +1,11 @@
 {% extends 'registration/admin.html' %}
 
-{% block title %}{% block title-meta %}
+{% block title-meta %}
 افزودن جنس
-{% endblock %}{% endblock %}
+{% endblock %}
+{% block title %}
+<h3>محصول شما در فروشگاه موجود است؟<a class="badge badge-danger" href="{% url 'accounts:confirm-stock' %}">  کلیک کنید </a></h3>
+{% endblock %}
 {% block main %}
 {% load crispy_forms_tags %}
 <div class="col-md-12">
@@ -41,5 +44,6 @@
             </form>
         </div>
 </div>
+
 
 {% endblock %}
