--- a/financial/templates/financial/pay.html
+++ b/financial/templates/financial/pay.html
@@ -49,6 +49,8 @@
                </div>
          </div>
               
+<a href="{% url 'accounts:addrescostomeradd' %}">افزودن آدرس جدید </a> <br>
+
 {% for address in  request.user.customer.address.all %}
 {% if forloop.first %}
       <input  type="radio" id="{{ address.id }}" name="address" value="{{ address.id }}" required>
