--- a/templates/base.html
+++ b/templates/base.html
@@ -158,9 +158,12 @@
     </nav> -->
     <div>
       <header class="main_menu home_menu">
+       
+      <!-- <a href=''><img class="api-img" src="{% static 'img/api-image.jpg' %}" /> </a> -->
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-12">
+                  
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="{% url 'content:home' %}"> <img class="logo" src="{% static 'img/logo.jpeg' %}" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -247,6 +250,7 @@
       </header> -->
       <div>
         {% block content %}
+
         {% endblock %}
       </div>
     
