--- a/content/templates/content/home.html
+++ b/content/templates/content/home.html
@@ -12,7 +12,7 @@
   {% endif %} {% endfor %} {% endcomment %}
 </div> -->
 {% load static %}
-<a href="#" class="api-img">APi</a>
+<a href="/api" class="api-img">APi</a>
 <img src="{% static 'img/slider.jpg' %}" class="slider-img" />
 <section class="feature_part section_padding bg-orange">
   <div class="container">
